Configure 'typos' spell checker
- add configuration in '.typos.toml'
- add VS Code extension in codespace

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,6 +34,7 @@
         "mechatroner.rainbow-csv",
         "quarto.quarto",
         "reditorsupport.r",
+        "tamasfe.even-better-toml",
         "yzhang.markdown-all-in-one"
       ]
     }
