--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,15 @@
 {
   "name": "Rocker codespace",
-  "build": {
-    "dockerfile": "Dockerfile"
-  },
+  "image": "ghcr.io/rocker-org/devcontainer/tidyverse:4",
   // Install Dev Container Features. More info: https://containers.dev/features
   "features": {
-    "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
-      "packages": "python-is-python3"
-    },
+    "ghcr.io/devcontainers/features/github-cli:1": {},
     "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {
-      "installTinyTex": false
+      "installTinyTex": true
     }
   },
   // Run commands after the container is started.
-  "postCreateCommand": "install2.r countrycode pak",
+  "postCreateCommand": "bash scripts/codespace-init.sh",
   "postAttachCommand": "sudo rstudio-server start",
   // Forward ports for RStudio
   "forwardPorts": [
